version mobile (fix

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ section {
 }
 
 #mobile button {
-    background-color: transparent;
+    background-color: #0f0c0c;
     border: none;
     color: #fff;
     font-size: 5em;
